Refactor Vulkan shader code for improved readability and maintainability
- Updated blend factor mappings in PipelineState.java for better clarity and organization.
- Enhanced SPIRVUtils.java by improving code formatting and adding comments for better understanding.
- Simplified Uniforms.java by consolidating uniform map initializations and improving method structure.
- Cleaned up GLSLParser.java by removing unnecessary state management and improving code formatting.
- Streamlined Lexer.java by removing unused state and enhancing token parsing logic.
- Refined SamplerManager.java by improving sampler creation logic and enhancing readability.
- Optimized VulkanImage.java by simplifying image creation and layout transition logic, improving overall code clarity.